// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test to <SearchScreen /> component Should match with Snapshot 1`] = `
Array [
  <h1>
    Search
  </h1>,
  <hr />,
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-6 col-lg-5"
    >
      <h4>
        Search
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Search a hero"
          type="text"
          value=""
        />
        <button
          className="btn btn-outline-primary mt-3 w-100"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-7"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Search a Hero
      </div>
    </div>
  </div>,
]
`;

exports[`Test to <SearchScreen /> component Should show a Batman card and the input with the queryString value 1`] = `
Array [
  <h1>
    Search
  </h1>,
  <hr />,
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-6 col-lg-5"
    >
      <h4>
        Search
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Search a hero"
          type="text"
          value="batman"
        />
        <button
          className="btn btn-outline-primary mt-3 w-100"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-7"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="col animate__animated  animate__zoomIn animate__faster"
      >
        <div
          className="card"
        >
          <div
            className="row nog-gutters"
          >
            <div
              className="col-md-5"
            >
              <img
                alt="Batman"
                className="card-img-top"
                src="/assets/dc-batman.jpg"
              />
            </div>
            <div
              className="col-md-7"
            >
              <div
                className="card-body"
              >
                <h5
                  className="card-title"
                >
                  Batman
                </h5>
                <p
                  className="card-text"
                >
                  Bruce Wayne
                </p>
                <p
                  className="card-text"
                >
                  <small
                    className="text-muted"
                  >
                    Detective Comics #27
                  </small>
                </p>
                <a
                  href="/hero/dc-batman"
                  onClick={[Function]}
                >
                  More...
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Test to <SearchScreen /> component Should show an error if it does not find a hero 1`] = `
Array [
  <h1>
    Search
  </h1>,
  <hr />,
  <div
    className="row"
  >
    <div
      className="col-sm-12 col-md-6 col-lg-5"
    >
      <h4>
        Search
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Search a hero"
          type="text"
          value="One Punch"
        />
        <button
          className="btn btn-outline-primary mt-3 w-100"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-sm-12 col-md-6 col-lg-7"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        No Matches by 
        One Punch
      </div>
    </div>
  </div>,
]
`;
